Fix countdown alignment in full screen

--- a/ui/app/pages/swaps/view-quote/index.scss
+++ b/ui/app/pages/swaps/view-quote/index.scss
@@ -14,7 +14,6 @@
     padding-left: 20px;
     padding-right: 20px;
     justify-content: space-between;
-    margin-top: 8px;
 
     @media screen and (max-width: 576px) {
       overflow-y: auto;
@@ -130,13 +129,14 @@
     }
   }
 
-  &__insufficient-eth-warning-wrapper {
+  &__warning-wrapper {
     width: 100%;
     align-items: center;
     justify-content: center;
+    margin-top: 8px;
 
     @media screen and (min-width: 576px) {
-      min-height: 36px;
+      min-height: 0;
       display: flex;
     }
   }
